--- a/style.css
+++ b/style.css
@@ -40,9 +40,12 @@ footer {
 .screen {
     width: 200px;
     height: 45px;
+    padding: 5px;
     border: 1px solid black;
     margin-bottom: 5px;
     background-color: rgb(239, 239, 239);
+    text-align: right;
+    font-size: 40px;
 }
 
 button {
