--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
 body {
+    background-color: rgb(216, 216, 216);
+    color: rgb(49, 49, 49);
+    min-height: 95vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+}
+
+a {
+    color: rgb(49, 49, 49);
+    text-decoration: none;
 }
 
 h1 {
@@ -24,8 +31,6 @@ footer {
 
 .calculator {
     margin: 15px;
-    width: 250px;
-    height: 300px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -46,6 +51,7 @@ footer {
     background-color: rgb(239, 239, 239);
     text-align: right;
     font-size: 40px;
+    overflow: hidden;
 }
 
 button {
