--- a/style.css
+++ b/style.css
@@ -21,12 +21,10 @@ h1 {
 }
 
 footer {
-    text-align:center;
-    position: end;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    text-align:flex-end;
+    margin-top: auto;
 }
 
 .calculator {
